Update contract and enforce it
