# contracts/api-spec.yaml
@@ -214,27 +214,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateEncoderRequest'
+              $ref: '#/components/schemas/EncoderModel'
       responses:
         '200':
           description: Successful creation the encoder
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EncoderModel'
-
-
-  /encoder/{serialNumber}:
-    get:
-      operationId: getEncoderById
-      description: Retrieve a specific encoder
-      tags:
-        - Encoders
-      parameters:
-        - $ref: '#/components/parameters/EncoderSerialNumber'
-      responses:
-        '200':
-          description: Successful retrieval of the encoder
           content:
             application/json:
               schema:
@@ -244,8 +227,6 @@ paths:
       description: Update a encoder's definition
       tags:
         - Encoders
-      parameters:
-        - $ref: '#/components/parameters/EncoderSerialNumber'
       requestBody:
         required: true
         content:
@@ -255,6 +236,23 @@ paths:
       responses:
         '200':
           description: Successful update of the Encoder
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EncoderModel'
+
+
+  /encoder/{serialNumber}:
+    get:
+      operationId: retrieveDecoder
+      description: Retrieve a specific encoder
+      tags:
+        - Encoders
+      parameters:
+        - $ref: '#/components/parameters/EncoderSerialNumber'
+      responses:
+        '200':
+          description: Successful retrieval of the encoder
           content:
             application/json:
               schema:
@@ -269,6 +267,11 @@ paths:
       responses:
         '200':
           description: Successful deletion of the encoder
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'Encoder with serial number BtmC8ckj deleted'
 
   /encoder/{serialNumber}/stream:
     get:
@@ -662,13 +665,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/OutputChannelModel'
-
-    CreateEncoderRequest:
-      description: A client that sends a video stream
-      properties:
-        serialNumber:
-          type: string
-          example: 'BtmC8ckj'
 
     DecodersModel:
       description: A list of decoder UUIDs
