# src/main/java/org/beanpod/switchboard/controller/EncoderController.java
@@ -6,7 +6,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 import javax.servlet.http.HttpServletRequest;
-import javax.transaction.Transactional;
 import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -21,15 +20,15 @@ import org.beanpod.switchboard.entity.DeviceEntity;
 import org.beanpod.switchboard.entity.EncoderEntity;
 import org.beanpod.switchboard.entity.UserEntity;
 import org.beanpod.switchboard.exceptions.ExceptionType;
+import org.beanpod.switchboard.exceptions.ExceptionType.UnknownException;
 import org.beanpod.switchboard.service.EncoderService;
 import org.beanpod.switchboard.util.MaintainDeviceStatus;
+import org.openapitools.api.EncoderApi;
+import org.openapitools.model.CreateEncoderRequest;
+import org.openapitools.model.EncoderModel;
 import org.openapitools.model.StreamModel;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -38,7 +37,7 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 @RequestMapping("/encoder")
 @RequiredArgsConstructor
-public class EncoderController {
+public class EncoderController implements EncoderApi {
 
   public static final String UNKNOWN_ERROR_MESSAGE = "Unknown error in EncoderController";
 
@@ -51,8 +50,8 @@ public class EncoderController {
   private final MaintainDeviceStatus maintainDeviceStatus;
   private final HttpServletRequest request;
 
-  @GetMapping
-  public List<EncoderDto> retrieveAllEncoders() {
+  @Override
+  public ResponseEntity<List<EncoderModel>> retrieveAllEncoders() {
     UserEntity user = userDao.findUser(request.getUserPrincipal().getName());
 
     List<EncoderEntity> encoderEntities = encoderDao.getEncoders(user);
@@ -60,8 +59,8 @@ public class EncoderController {
     return encoderMapper.toEncoderDtos(encoderEntities);
   }
 
-  @GetMapping("/{serialNumber}")
-  public ResponseEntity<EncoderDto> retrieveEncoder(@PathVariable @Valid String serialNumber) {
+  @Override
+  public ResponseEntity<EncoderModel> retrieveDecoder(@PathVariable @Valid String serialNumber) {
     UserEntity user = userDao.findUser(request.getUserPrincipal().getName());
 
     // maintain status field and create a log if status changed
@@ -80,26 +79,25 @@ public class EncoderController {
         .orElseThrow(() -> new ExceptionType.DeviceNotFoundException(serialNumber));
   }
 
-  @PostMapping
-  public ResponseEntity<EncoderDto> createEncoder(@RequestBody @Valid EncoderDto encoderDto) {
-    if (encoderDto.getOutput().isEmpty()) {
-      throw new ExceptionType.MissingChannelsException(encoderDto.getSerialNumber());
+  @Override
+  public ResponseEntity<EncoderModel> createEncoder(@RequestBody @Valid EncoderModel encoderModel) {
+    if (encoderModel.getOutput().isEmpty()) {
+      throw new ExceptionType.MissingChannelsException(encoderModel.getSerialNumber());
     }
 
     UserEntity user = userDao.findUser(request.getUserPrincipal().getName());
 
     Optional<DeviceDto> deviceOptional =
-        deviceService.findDevice(user, encoderDto.getSerialNumber());
+        deviceService.findDevice(user, encoderModel.getSerialNumber());
     if (deviceOptional.isEmpty()) {
-      throw new ExceptionType.DeviceNotFoundException(encoderDto.getSerialNumber());
+      throw new ExceptionType.DeviceNotFoundException(encoderModel.getSerialNumber());
     }
     encoderDto.setDevice(deviceOptional.get());
     encoderDto.setLastCommunication(Date.from(Instant.now()));
     return ResponseEntity.ok(encoderDao.save(user, encoderDto));
   }
 
-  @DeleteMapping("/{serialNumber}")
-  @Transactional
+  @Override
   public ResponseEntity<String> deleteEncoder(@PathVariable String serialNumber) {
     UserEntity user = userDao.findUser(request.getUserPrincipal().getName());
 
@@ -110,18 +108,18 @@ public class EncoderController {
     return ResponseEntity.ok("Encoder with serial number " + serialNumber + " Deleted");
   }
 
-  @PutMapping
-  public ResponseEntity<EncoderDto> updateEncoder(@RequestBody EncoderDto encoderDto) {
+  @Override
+  public ResponseEntity<EncoderModel> updateEncoder(@Valid EncoderModel encoderModel) {
     UserEntity user = userDao.findUser(request.getUserPrincipal().getName());
 
-    Optional<EncoderDto> encoder = encoderDao.findEncoder(user, encoderDto.getSerialNumber());
-    if (encoder.isEmpty()) {
-      throw new ExceptionType.DeviceNotFoundException(encoderDto.getSerialNumber());
-    }
-    return ResponseEntity.ok(encoderDao.save(user, encoderDto));
+    return encoderDao.findEncoder(user, encoderModel.getSerialNumber())
+        .map((encoderDto) -> encoderDao.save(user, encoderDto))
+        .map(encoderMapper::toEncoderModel)
+        .map(ResponseEntity::ok)
+        .orElseThrow(this::getUnknownException);
   }
 
-  @GetMapping("/{serialNumber}/streams")
+  @Override
   public ResponseEntity<List<StreamModel>> getEncoderStreams(@PathVariable String serialNumber) {
     UserEntity user = userDao.findUser(request.getUserPrincipal().getName());
 
